--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">BigWhite</string>
+    <string name="host">192.168.8.150</string>
+    <string name="port">3000</string>
+
 </resources>
